# pondus

./: .gitignore  Cargo.toml  README.md  models.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: delegation-prompts.md
docs/brainstorms/: 2026-02-27-pondus-design-brainstorm.md
docs/plans/: 2026-02-27-feat-pondus-benchmark-aggregator-plan.md
pondus/: __init__.py
src/: alias.rs  cache.rs  config.rs  main.rs  models.rs  monitor.rs  output.rs  recommend.rs
src/sources/: aa.rs  aider.rs  arena.rs  livebench.rs  mock.rs  mod.rs  openrouter.rs  seal.rs  swebench.rs  swebench_r.rs  tbench.rs
tests/: integration_test.rs
