[package]
name = "pondus"
version = "0.2.2"
edition = "2024"
description = "Opinionated AI model benchmark aggregator"
license = "MIT"
repository = "https://github.com/terry-li-hm/pondus"
keywords = ["ai", "benchmarks", "llm", "evaluation"]
categories = ["command-line-utilities"]

[[bin]]
name = "pondus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
owo-colors = "4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
